fix flickering

--- a/app/style.css
+++ b/app/style.css
@@ -18,11 +18,22 @@ body {
 	bottom: 0;
 	overflow: hidden;
 }
+body * {
+	backface-visibility: hidden;
+	/*-webkit-transform: translate3d(0, 0, 0);*/
+}
 a {
 	text-decoration: none;
 }
 .lung {
 	transition-timing-function: ease;
+	-webkit-backface-visibility: hidden;
+	backface-visibility: hidden;
+	-webkit-perspective: 0;
+	/*-webkit-transform-style: preserve-3d;
+	transform-style: preserve-3d;
+	-webkit-transform: translate3d(0,0,0);
+	transform: translate3d(0,0,0);*/
 	border: 1px solid rgba(255,255,255,0);
 }
 
